peac_dev/force-app/main/default/objects/Job_Sequence_Error__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The primary batch job ID</inlineHelpText>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>