peac_dev/force-app/main/default/objects/Job_Sequence_Error__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the job that produced the failure</inlineHelpText>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>