peac_dev/force-app/main/default/objects/Job_Sequence_Error__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What ids were in the scope?</inlineHelpText>
    <label>Scope</label>
    <length>4500</length>
    <type>LongTextArea</type>
</CustomField>