peac_dev/force-app/main/default/objects/Job_Sequence_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobFrequency__c</columns>
    <columns>JobName__c</columns>
    <columns>Exception__c</columns>
    <columns>BatchJobId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/30/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>