peac_dev/force-app/main/default/objects/Job_Sequence_Error__c/listViews/Lost_Oppty.listView-meta.xml
<ListView>
    <fullName>Lost_Oppty</fullName>
    <columns>NAME</columns>
    <columns>JobFrequency__c</columns>
    <columns>JobName__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Exception__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>JobName__c</field>
        <operation>contains</operation>
        <value>Auto_Close</value>
    </filters>
    <label>Lost Oppty</label>
</ListView>